src/styles/main.css
/* ... */
.text-block {
  max-width: 800px;
  padding: 0 var(--spacing-lg);
}

.separator::before {
  content: "...";
  text-align: center;
}

.executive-summary {
  background-color: var(--background-gray-medium);
  text-align: center;
  width: 100%;
}

.executive-summary-text {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 48px 32px;
  text-align: left;
}


/********** EXPERIENCE ACCORDIONS **********/

.experience-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
  max-width: 1060px;
}

.experience-details {
  padding: 0;
  cursor: pointer;
  margin-bottom: 0;
  background-color: var(--background-gray-medium);
  border-bottom: 1px solid var(--background-body);
}

.experience-details>summary {
  display: grid;
  grid-template-columns: 168px minmax(200px, 990px) 32px;
  align-items: center;
  gap: 24px;
  padding: var(--spacing-sm) var(--spacing-lg) var(--spacing-sm) var(--spacing-sm);
  list-style: none;
  /* Makes the default arrow hide in all browsers */
}


details>summary::-webkit-details-marker {
  display: none;
  /* Makes the default arrow hide in Safari */
}


.experience-title {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.experience-btn {
  background-repeat: no-repeat;
  width: 32px;
  height: 32px;
  background-size: cover;
}

.experience-details .experience-btn-svg {
  fill: var(--typography-gray-300);

  .vertical {
    transition: all 0.2s ease-in-out;
  }
}

.experience-details[open] .experience-btn-svg {
  .vertical {
    height: 2.4px;
    y: 14.8px;
  }
}

.experience-image {
  background-color: var(--background-gray-medium);
}

.experience-description {
  margin: 0 var(--spacing-3xl) var(--spacing-xl) 208px;
  margin-bottom: 0;
}

.experience-description>div>*:last-child {
  /* This is a workaround to add margin to the description*/
  margin-bottom: var(--spacing-2xl);
}


/***** Experience details animation *************/


details>div {
  overflow: hidden;
  display: grid;
  /* intentionally independent from .animation as Safari 16
  would otherwise ignore the expansion animation. */
  animation-duration: 150ms;
}

details>.animation {
  animation-name: grid-expand;
  animation-timing-function: ease-out;
}

details>.collapsing {
  animation-direction: reverse;
  animation-timing-function: ease-in;
}

details>div>div {
  min-height: 0;
}

@keyframes grid-expand {
  0% {
    grid-template-rows: 0fr;
  }

  100% {
    grid-template-rows: 1fr;
  }
}



/********** SKILLSET **********/

.skillset {
  width: 100%;
  background-color: var(--background-gray-medium);
  padding-bottom: 158px;
}


.skillset-wrapper {
  max-width: 764px;
  position: relative;
}

.tag-list {
  display: flex;
  flex-direction: row;
  gap: 8px;
  flex-wrap: wrap;
}

.tag {
  color: var(--typography-gray-dark);
  background-color: var(--typography-green-lighter);
  padding: var(--spacing-xs) var(--spacing-sm);
  font-size: var(--font-2xs);
  line-height: 22px;
  letter-spacing: 1px;
  font-weight: 700;
  text-transform: uppercase;
}

.cv-btn {
  position: absolute;
  right: 0;
  left: 0;
  display: grid;
  grid-template-columns: 1fr 1fr;
  background: var(--background-body);
  gap: 2px;
}

.cv-btn>a {
  all: unset;
  background-clip: unset;
  cursor: pointer;
  transition: background-color 0.4s ease;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: var(--spacing-xl) var(--spacing-sm);
  background-color: var(--background-gray-light);
}

.cv-btn>a:focus-visible {
  outline: 2px dotted var(--typography-gray-200);
}

.cv-btn>a:hover {
  background-color: var(--background-gray-lighter);
}

.cv-btn>a:hover>span {
  /* repeats style of the .btn-green class to force hover state on the card */
  cursor: pointer;
  background-clip: text;
  color: transparent;
}

.cv-btn>a>img {
  width: 52px;
  height: 52px;
}

.icon-arrow-new-tab {
  margin-bottom: -2px;
}

.icon-arrow-new-tab svg {
  transition: transform 0.2s ease, opacity 0.2s ease;
}

.cv-btn a:first-child:hover .icon-arrow-new-tab svg {
  opacity: 0.7;
  transform: translate(2px, -2px);
}

.cv-btn a:last-child:hover .icon-arrow-new-tab svg {
  opacity: 0.7;
  transform: translate(2px, -2px);
}

/********** SKILLSET **********/

.testimonial-list {
  width: 100%;
  text-align: center;
  padding-bottom: var(--spacing-4xl);
  margin-bottom: -128px;
}

.testimonial-list>.wrapper {
  max-width: 764px;
}

.testimonial-detail {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
}

.testimonial-detail:before {
  content: "";
  position: absolute;
  top: -38px;
  width: 64px;
  height: 30px;
  background-image: url(../images/icons/quote.svg);
  background-size: 64px 30px;
  background-repeat: no-repeat;
}


.testimonial-detail-author {
  display: grid;
  grid-template-columns: 48px 1fr;
  gap: 16px;
  margin-top: var(--spacing-sm);
}


.testimonial-detail-author>a>img {
  width: 48px;
  height: 48px;
  border-radius: 50%;
}

.testimonial-detail-author-info {
  display: flex;
  flex-direction: column;
}

.testimonial-detail-author-info-name {
  display: inline-block;
}

.testimonial-detail-author-info-name>.divider {
  margin: 0 var(--spacing-2xs);
}


/**************** MEDIUM ZOOM OVERLAY ****************/

.medium-zoom-overlay,
.medium-zoom-image--opened {
  z-index: 9999;
}

.medium-zoom-medium,
.medium-zoom-large {
  width: 100%;
  height: auto;
}

.medium-zoom-medium {
  max-width: 994px;
}

.medium-zoom-small {
  width: 50%;
}

.medium-zoom-small img,
.medium-zoom-medium img,
.medium-zoom-large img {
  display: block;
}

.two-column-image {
  display: flex;
  flex-direction: row;
  gap: 16px;
}


/**************** BRANDS LIST ****************/

.brands-list {
  padding: 0 var(--spacing-lg);
  text-align: center;
  max-width: 1344px;
  width: 100%;
}

.brands-list-grid {
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  justify-items: center;
  row-gap: 16px;
}
/* ... */

